src/test/ui/parser/type-alias-where.stderr
error: where clauses are not allowed after the type for type aliases
  --> $DIR/type-alias-where.rs:8:15
   |
LL | type Bar = () where u32: Copy;
   |               ^^^^^^^^^^^^^^^

error: where clauses are not allowed after the type for type aliases
  --> $DIR/type-alias-where.rs:10:15
   |
LL | type Baz = () where;
   |               ^^^^^

error: where clause not allowed here
  --> $DIR/type-alias-where.rs:22:16
   |
LL |     type Assoc where u32: Copy = ();
   |                ^^^^^^^^^^^^^^^     - help: move it here: `where u32: Copy`

error: where clause not allowed here
  --> $DIR/type-alias-where.rs:25:17
   |
LL |     type Assoc2 where u32: Copy = () where i32: Copy;
   |                 ^^^^^^^^^^^^^^^                     - help: move it here: `, u32: Copy`

error: where clause not allowed here
  --> $DIR/type-alias-where.rs:33:17
   |
LL |     type Assoc2 where u32: Copy, i32: Copy = ();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^     - help: move it here: `where u32: Copy, i32: Copy`

error: aborting due to 5 previous errors

